<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/app_name"
        android:gravity="center_vertical"
        android:text="@string/vibreurparamtitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <Switch
        android:id="@+id/vibreurparamSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:checked="false"
        android:contentDescription="@string/app_name"
        android:gravity="center_vertical"
        android:text="@string/vibreurparamswitch"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/vibreurparamtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:gravity="center_vertical"
        android:text="@string/vibreurparam1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colortext" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/spinnervibreurparam1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dp" />

        <Spinner
            android:id="@+id/spinnervibreurparam2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dp" />

        <Spinner
            android:id="@+id/spinnervibreurparam3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dp" />

    </RelativeLayout>

    <Button
        android:id="@+id/vibreurtest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vibreurparamtest"
        android:textColor="@color/colortext" />
</LinearLayout>