<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbackground"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

    <ListView
        android:id="@+id/listViewConvopost"
        android:layout_width="match_parent"
        android:stackFromBottom="true"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/replylayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorbackground"
        android:layout_alignParentBottom="true" >

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/colorbutton"/>

        <Button
            android:id="@+id/outilbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonoutil"
            android:textColor="@color/colortext" />

        <EditText
            android:id="@+id/replytextarea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="4"
            android:gravity="top"
            android:hint="@string/replyhint"
            android:textColor="@color/colortext" />

        <Button
            android:id="@+id/sendbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonsendreply"
            android:textColor="@color/colortext" />
    </LinearLayout>
</RelativeLayout>